--- a/WebContent/view/userinfo.html
+++ b/WebContent/view/userinfo.html
@@ -347,6 +347,9 @@
                 <li class="myactive" style="border-radius: 0 0 6px 6px;">
                     <a href="userinfo.html"><i class="icon-chevron-right"></i> 个人中心</a>
                 </li>
+                <li>
+					<a href="address.html"><i class="icon-chevron-right"></i> 地址管理</a>
+				</li>
             </ul>
         </div>
         <!--/span-->
