--- a/WebContent/view/my-order.html
+++ b/WebContent/view/my-order.html
@@ -234,56 +234,86 @@
                     <a href="userinfo.html"><i class="icon-chevron-right"></i> 个人中心</a>
                 </li>
                 <li>
-					<a href="address.html"><i class="icon-chevron-right"></i> 地址管理</a>
-				</li>
+						<a href="address.html"><i class="icon-chevron-right"></i> 地址管理</a>
+					</li>
             </ul>
         </div>
         <!--/span-->
         <div class="span9" id="content">
             <div class="row-fluid">
 	            <div class="btn-group col-xs-12" role="group" aria-label="..." style="margin-top:31px;">
-				  <button type="button" class="btn btn-default col-xs-6 active">收到的订单</button>
-				  <button type="button" class="btn btn-default col-xs-6" onclick="window.location.href='my-order.html'">我的订单</button>
+				  <button type="button" class="btn btn-default col-xs-6" onclick="window.location.href='order.html';">收到的订单</button>
+				  <button type="button" class="btn btn-default col-xs-6 active">我的订单</button>
 				</div>
                 <!-- block -->
                 <div class="block" style="margin:5em 0em !important; ">
                     <div class="navbar myTableLable block-header">
                         <div class="muted pull-left">订单列表</div>
                     </div>
-                    <div class="block-content collapse in"><!-- collapse in -->
+                    <div class="block-content collapse in" id="order_table"><!-- collapse in -->
                         <!--<div class="span12">-->
-                        <table class="table table-bordered text-center">
-                            <thead>
-                            <tr>
-                                <th>编号</th>
-                                <th>商品名称</th>
-                                <th>日期</th>
-                                <th>总计</th>
-                                <th>订单状态</th>
-                               	<th>分配快递</th>
-                                <th>操作</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>
-                                	<select id="express">
-                                		<option selected="selected">申通快递</option>
-                                		<option>韵达快递</option>
-                                	</select>
-                                </td>
-                                <td>待确认</td>
-                                <td>
-                                    <button class="btn btn-xs btn-default">详情</button>
-                                    <button class="btn btn-xs btn-danger">确认</button>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <!-- <table class="table" style="background-color: #f5f5f5;border-radius: 4px;">
+						   <thead>
+						      <tr style="border-bottom: 1px solid #dddddd;">
+								  <td colspan="2" style="text-align: left !important;">订单编号xxxxxxxxxxx</td>
+								  <td colspan="2" style="text-align: right !important;">xxxx-xx-xx xx:xx:xx</td>
+						      </tr>
+						   </thead>
+						   <tbody>
+						      <tr>
+						         <td>商品名称</td>
+						         <td>单价</td>
+								  <td>数量</td>
+								  <td>小计</td>
+						      </tr>
+						   </tbody>	
+						</table>
+						<div class="row">
+							<div class="col-md-12 col-lg-12 col-sm-12">
+								<div class="cart-summary">
+									<div style="margin-left: 1rem; margin-top: 0.4rem;" class="pull-right total">
+										<label>金额合计:<span id="priceTotal" class="price-total large-bold-red">0.00</span></label>
+									</div>
+									<div style="margin-top: 4px;margin-left:1rem;" class="pull-right">
+										<label>共计<span id="qtyCount" class="large-bold-red" style="margin: 0 4px;">10</span>件
+										</label>
+									</div>
+									<div class="pull-right" id="order_status">
+										
+									</div>
+								</div>
+								<hr style="margin-top:55px;">
+								<form class="form-horizontal" role="form" style="padding-right:148px;">
+								  <div class="form-group">
+								    <label class="col-sm-4 control-label">收件人:</label>
+								    <div class="col-sm-8">
+								      <p class="form-control" id="sj_user">xxxxx</p>
+								    </div>
+								  </div>
+								  <div class="form-group">
+								    <label class="col-sm-4 control-label">联系电话:</label>
+								    <div class="col-sm-8">
+								      <p class="form-control" id="sj_phone">13112341234</p>
+								    </div>
+								  </div>
+								  <div class="form-group">
+								    <label class="col-sm-4 control-label">收货地址:</label>
+								    <div class="col-sm-8">
+								      <select class="form-control" id="address_select">
+									      <option>北京市朝阳区来广营荣达路14号100010</option>
+									      <option>北京市朝阳区来广营荣达路14号</option>
+									      <option>北京市朝阳区来广营荣达路14号</option>
+									      <option>北京市朝阳区来广营荣达路14号</option>
+									      <option>北京市朝阳区来广营荣达路14号</option>
+									    </select>
+								    </div>
+								  </div>
+								  <div class="form-group text-center">
+							  		<button type="button" class="btn btn-primary" style="width:30%;">确认付款</button>
+								  </div>
+								</form>
+							</div>
+						</div> -->
                         <!--</div>-->
                         <div class="pull-right">
                             <ul class="pagination pagination-sm">
@@ -387,16 +417,19 @@
 <script>
     $(function() {
         // Easy pie charts
+        var loginUser;
         $('.chart').easyPieChart({animate: 1000});
         if(Util.getSession('login_user')){
-			var loginUser = JSON.parse(Util.getSession("login_user"));
+			loginUser = JSON.parse(Util.getSession("login_user"));
 			$('.w3l_login').empty().html('<div style="height:50px;line-height: 50px;font-size: large;">欢迎您! '+loginUser.uName+'&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-sm btn-info" onclick="loginout()">注销</button></div>');
 			$('.w3l_logo').css('margin-left','15em');
 		}
         
-        getGoodsBrand();
-        getExpress();
+        $('#sj_user').text(loginUser.uName);
+        $('#sj_phone').text(loginUser.uPhone);
         
+        getGoodsBrand();
+        getAddress();
     });
     function getGoodsBrand(){
 		$.ajax({
@@ -429,11 +462,11 @@
 		window.location.href = 'search.html?bId='+bId;
 	}
 	
-	function getExpress(){
+	function getAddress(){
 		$.ajax({
 			type : "get",
 			async : true,
-			url : "../express/list.action",
+			url : "../address/listAll.action",
 			dataType : "json",
 			data : {},
 			success : function(data) {
@@ -444,12 +477,57 @@
 					var html ='';
 					for (var i = 0; i < rows.length; i++) {
 						if(i == 0){
-							html += '<option selected="selected" value="'+rows[i].eId+'">'+rows[i].eExpress+'</option>';
+							html += '<option selected="selected" value="'+rows[i].aId+'">'+rows[i].aDescribe+'</option>';
 						}else{
-							html += '<option value="'+rows[i].eId+'">'+rows[i].eExpress+'</option>';
+							html += '<option value="'+rows[i].aId+'">'+rows[i].aDescribe+'</option>';
 						}
 					}
-					$('#express').empty().html(html);
+					$('#address_select').empty().html(html);
+				} else {
+					//没有数据或服务器错误
+				}
+			}
+		});
+	}
+	
+	function getOrder(){
+		$.ajax({
+			type : "get",
+			async : true,
+			url : "../orderDetails/list.action",
+			dataType : "json",
+			data : {},
+			success : function(data) {
+				console.log(data);
+				if (data.status == 'success') {
+					var rows = [];
+					rows = data.data;
+					var html ='';
+					for (var i = 0; i < rows.length; i++) {
+						html += '<table class="table" style="background-color: #f5f5f5;border-radius: 4px;">';
+						html += '<thead>';
+						html += '<tr style="border-bottom: 1px solid #dddddd;">';
+						html += '<td colspan="2" style="text-align: left !important;">'+rows[0].dOId.oId+'</td>';
+						html += '<td colspan="2" style="text-align: right !important;">'+rows[0].dOId.oDetermine+'</td>';
+						html += '</tr>';
+						html += '</thead>';
+						html += '<tbody>';
+						html += '<tr>';
+						html += '<td>'++'</td>';
+						html += '<td>单价</td>';
+						html += '<td>数量</td>';
+						html += '<td>小计</td>';
+						html += '</tr>';
+						html += '</tbody>';
+						html += '</table>';
+						html += '<div class="row">';
+						html += '<div class="col-md-12 col-lg-12 col-sm-12">';
+						html += '<div class="cart-summary">';
+						html += '<div style="margin-left: 1rem; margin-top: 0.4rem;" class="pull-right total">';
+						html += '<label>金额合计:<span id="priceTotal" class="price-total large-bold-red">'+rows[0].dOId.oTotal+'</span></label>';
+						
+					}
+					$('#address_select').empty().html(html);
 				} else {
 					//没有数据或服务器错误
 				}
